# robit-cpp-homework

HW1/assignment_1/: BoolQueue.h  BoolStack.h  CMakeLists.txt  main.cpp
HW2/assignment_2/: CMakeLists.txt  Math-Stack.h  MathStack.h  main.cpp
HW4/assignment_4/: CMakeLists.txt  MyVector.h  main.cpp
HW5/assignment_5/: Animal.h  CMakeLists.txt  animal.h  main.cpp
